- Added new option to set max items to show - Changed the way we detect visibility of each items on the widget - Fixed some feedbacks related to the UI

--- a/tests/rows-widget.css
+++ b/tests/rows-widget.css
@@ -8,8 +8,8 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
-  margin: 0px 15px !important;
-  padding: 15px 0px !important;
+  margin: 0px 10px !important;
+  padding: 10px 0px !important;
   width: 100% !important;
   flex: unset !important;
   max-width: 100% !important;
@@ -39,7 +39,7 @@
 .jxrwgt-itm-cat-cl {
   font-size: 12px;
   position: absolute;
-  top: 15px;
+  top: 10px;
   left: 0px;
   background: rgba(0,0,0,0.65);
   padding: 0px 5px;
